# tree-sitter-auto

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-auto.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_auto/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAuto/: auto.h
bindings/swift/TreeSitterAutoTests/: TreeSitterAutoTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: 000_pair.txt  001_obj.txt  002_array.txt  003_var.txt  004_arith.txt  005_comp.txt  006_control.txt  007_fn.txt  008_mod.txt  009_node.txt  010_ab.txt  011_ui.txt  012_actors.txt  013_schema.txt  014_xml.txt  015_enum.txt  016_template.txt  017_type.txt
