[package]
name = "tree-sitter-auto"
description = "the Auto programming language"
version = "0.1.0"
authors = ["Zhao Puming <visus@qq.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "auto"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://gitee.com/auto-stack/auto-lang"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
